# itmo_compilers_project

./: .gitignore  Cargo.toml  README.md  questions.md
.cargo/: config.toml
.github/: .envrc  shell.nix
.github/workflows/: pr.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  bytecode.rs  lexem.rs  lexer.rs  main.rs  operators.rs  tokens.rs  types.rs
compiler/src/lexer/: tests.rs
doc/: expression_semantics.md
testdata/expessions/: 01.correct  01.i
testdata/smoke/: 01.i  02.i  04.i  05.i  06.i  07.i  08.i  09.i  10.i  arithmetic_operations.i  arrays_and_records.i  comparison_operators.i  complex_expressions.correct  conditionals.i  for_loops.i  for_loops.out  function_parameters.i  function_return.i  operator_precedence.i  records.i  test-names  type_conversions.correct  type_conversions.i  variable_declarations.i  while_loops.i
tests/lexer/: arithmetic_operations.txt  arrays_and_records.txt  comparison_operators.txt  complex_expressions.txt  conditionals.txt  deep_conditionals.txt  for_loops.txt  function_parameters.txt  function_return.txt  identifiers.txt  invalid.txt  lexer_invalid.txt  logical_operators.txt  nested_control.txt  operator_precedence.txt  parse_minus.txt  real_literals.txt  records.txt  recursive_types.txt  shadow.txt  type_aliases.txt  type_conversions.txt  variable_declarations.txt  while_loops.txt
tests/run/: arithmetic_operations.stdout  comparison_operators.stdout  complex_expressions.stdout  function_return.stdout  logical_operators.stdout  nested_control.stdout  operator_precedence.stdout  real_literals.stdout  type_conversions.stdout  variable_declarations.stdout
tests/smoke/: arithmetic_operations.lexed  arrays_and_records.lexed  comparison_operators.correct  comparison_operators.lexed  complex_expressions.i  complex_expressions.lexed  conditionals.lexed  deep_conditionals.i  deep_conditionals.lexed  for_loops.i  for_loops.lexed  function_parameters.lexed  function_return.i  function_return.lexed  identifiers.correct  invalid.i  invalid.lexed  logical_operators.i  logical_operators.lexed  nested_control.i  non_ascii_identifiers.correct  non_ascii_identifiers.i  non_ascii_identifiers.lexed  parse_minus.lexed  real_literals.i  records.correct  records.i  records.lexed  recursive_types.i  recursive_types.lexed  shadow.i  shadow.lexed  test-names  type_aliases.lexed  type_conversions.lexed  variable_declarations.i  variable_declarations.lexed  while_loops.lexed
tests/src/: arithmetic_operations.i  comparison_operators.i  complex_expressions.i  conditionals.i  for_loops.i  function_parameters.i  identifiers.i  lexer_invalid.i  logical_operators.i  operator_precedence.i  parse_minus.i  recursive_types.i  shadow.i  type_aliases.i  type_conversions.i  while_loops.i
xtask/: Cargo.toml
xtask/src/: cli.rs  lib.rs  main.rs  tests.rs
