[package]
name = "compiler"
authors = [
  "Pavel Grigorenko <GrigorenkoPV@niuitmo.ru>",
  "Jegor Popow <juicedogegor@gmail.com>",
]
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
default-run = "compiler"

[lints]
workspace = true

[dependencies]
derive-where = "1.6.0"
phf = { version = "0.13.1", features = ["macros"] }
unicode-ident = "1.0.24"

[dev-dependencies]
expect-test = "1.5.1"
